com.top_logic.themes.core/src/main/webapp/style/form.css
/* ... */
.ddwttContainer.cannot-edit {
    display: inline-flex;
    flex-wrap: wrap;
	column-gap: var(--spacing-02);
	row-gap: var(--spacing-02);
}

.ddwttContainer.active {
	display: inline-flex;
	flex-wrap: wrap;
}

.dfContent .ddwttContainer::before, .dfContent .ddwttContainer::after {
	content: " ";
}

.rf_header .ddwttDropBtn {
	margin-left: var(--spacing-02);
}

.ddwttDropBtn {
	font-family: var(--font-family);
	font-size: var(--body-02-font-size);
	line-height: var(--body-02-line-height);
	letter-spacing: var(--body-02-letter-spacing);
	width: fit-content;
	max-width: 100%;
	height: var(--form-line-height);
	border: none;
	display: inline-flex;
	align-items: center;
	color: var(--highlight-fg, var(--text-primary));
	background: var(--highlight-bg, var(--field));
	padding-left: var(--spacing-03);
	padding-right: var(--spacing-02);
	gap: var(--spacing-02);
	cursor: pointer;
}

.ddwttDropBtn .ddwttButtonContent {
	display: inline-flex;
	gap: var(--spacing-02);
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

span.disabled .ddwttDropBtn {
	background: var(--field);
	color: var(--text-disabled);
}

.ddwttContainer.error .ddwttDropBtn {
	box-shadow: inset 0px 0px 0px 1px var(--support-danger),inset 0px 0px 0px 2px var(--focus-inset);
}

.ddwttContainer .ddwttDropBtn:focus,
.error.ddwttDropBtnActive .ddwttDropBtn{
	box-shadow: inset 0px 0px 0px 2px var(--focus),inset 0px 0px 0px 3px var(--focus-inset);
	outline: none !important;
}

.fptSubtitleContent .ddwttDropBtn, 
.fptSubtitleContent input {
	height: 1.4rem;
}

.ddwttDropBtn .ddwttChevron i {
	color: var(--highlight-fg, var(--icon-on-color-disabled));
}

.ddwttDropBtnActive .ddwttChevron i {
	color: var(--button-fg, var(--icon-primary));
}

/* DropDown */
.ddwttDDBox {
	display: inline-flex;
	flex-direction: column;
	margin: 0;
	position: fixed;
	width: fit-content;
	z-index: 10;
	background-color: var(--field);
	border: 1px solid var(--focus);
	color: var(--text-secondary);
	box-sizing: border-box;
	box-shadow: var(--shadow-menu);
}

.ddwttDDBox span {
	margin: 0;
	line-height: var(--form-line-height);
}

.ddwttContainer .ddwttDDBox {
	display: none;
}

.ddwttDDList {
	display: flex;
	flex-direction: column;
	overflow-y: auto;
}

.ddwttSearch {
	font-family: var(--font-family);
	font-size: var(--body-02-font-size);
	line-height: var(--body-02-line-height);
	letter-spacing: var(--body-02-letter-spacing);
	height: var(--form-line-height);
	border: none;
	border-radius: initial;
	background: var(--field);
	padding: 0 var(--spacing-03);
	flex-shrink: 0;
}

.ddwttSearch::-webkit-search-cancel-button {
	cursor: pointer;
}

.ddwttSearch:focus-visible {
	color: var(--text-primary);
	box-shadow: inset 0px 0px 0px 2px var(--focus),inset 0px 0px 0px 3px var(--focus-inset);
	outline: none !important;
}

.ddwttHide {
	position: absolute;
	clip-path: circle(0);
	top: 0;
	left: 0;
}

.ddwttItem.ddwttSelectedItem {
	display: none;
}

.ddwttItem {
	display: inline-flex;
	gap: var(--spacing-02);
	padding: 0 var(--spacing-02) 0 var(--spacing-03);
	position: relative;
	text-align: left;
	cursor: pointer;
}

.ddwttActiveItem {
	color: var(--text-primary);
	background-color: var(--layer-hover);
	outline: none;
}

.ddwttActiveItem:focus{
	box-shadow: inset 0px 0px 0px 2px var(--focus),inset 0px 0px 0px 3px var(--focus-inset);
	outline: none !important;
}

.ddwttImmutableItem {
	text-align: left;
}

img.ddwttItemIcon {
	height: 1em;
	object-fit: contain;
	align-self: center;
}

.ddwttItem .ddwttItemLabel {
	display: inline-block;}

.ddwttItemLabel {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

/* Tags */
.ddwttTagLoc {
	display: contents;
}

.ddwttTag {
	display: inline-flex;
	width: fit-content;
	height: var(--form-line-height);
	margin-right: var(--spacing-02);
	margin-bottom: var(--spacing-02);
	overflow: hidden;
}

.ddwttTag.ddwttOverflow {
	width: 100%;
}

.ddwttTagContent {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	gap: var(--spacing-02);
	box-sizing: border-box;
	padding: 0 var(--spacing-02);
	background: var(--background);
	border: 1px solid var(--border-subtle);
	overflow: hidden;
}

.ddwttTag.ddwttOverflow .ddwttTagContent {
	z-index: 100;
	position: absolute;
	margin-right: var(--spacing-02);
	margin-bottom: var(--spacing-02);
}

.ddwttTag.ddwttOverflow .ddwttTagContent .ddwttItemLabel {
	white-space: normal;
	overflow-wrap: anywhere;
}

.ddwttContainer:has(.ddwttTag.ddwttOverflow) {
	overflow: visible;
}


.ddwttTagX {
	width: .875rem;
	height: 0.875rem;
	/* Style from .fClear */
	transform: scale(0.8);
	display: inline-flex;
	align-items: center;
}

.ddwttTagX i {
	color: var(--button-fg, var(--icon-primary));
}

/* Tooltip */
.ddwttTooltip {
	min-width: 200px;
	max-width: 500px;
	background-color: var(--layer);
	position: fixed;
	filter: drop-shadow(var(--shadow-menu));
	display: none;
	z-index: 9999999999999999;
}

.ddwttActiveItem .ddwttTooltip {
	display: flex;
	flex-direction: column;
}

/* tooltip Arrow */
.ddwttTooltip::after {
	content: '';
	position: absolute;
	width: var(--ttArrow-dim);
	height: var(--ttArrow-dim);
	top: var(--ttArrow-top);
	transform: var(--ttArrow-trans);
	background-color: var(--layer);
	--ttArrow-dim: 18px;
}

.ddwttTtArrowLeft::after {
	left: 2px;
	--ttArrow-trans: translate(-50%, -50%);
	clip-path: polygon(50% 0%, 0% 50%, 50% 100%);
}

.ddwttTtArrowRight::after {
	right: 2px;
	--ttArrow-trans: translate(50%, -50%);
	clip-path: polygon(50% 0%, 100% 50%, 50% 100%);
}

.ddwttTooltipContent {
	overflow-y: auto;
	white-space: normal;
	overflow-wrap: break-word;
	max-height: calc(100vh - (var(--ttPadding) * 4));
	--ttPadding: var(--spacing-02);;
	padding: var(--ttPadding) 12px;
	line-height: 1.5 !important;
	color: var(--text-inverse);
}

.ddwttTooltipContent * {
	margin: 0;
	color: var(--text-inverse);
	line-height: 1.5 !important;
	padding: 0 !important;
}
/* ... */

